Начат адаптив корзины

--- a/cart/index.html
+++ b/cart/index.html
@@ -13,13 +13,15 @@
       <section class="top-info">
         <div class="row">
           <!-- Лого -->
-          <div class="small-3 columns">
-            <img src="/templates/flover/img/logo.png" />
+          <div class="small-6 small-offset-3 medium-offset-0 medium-3 columns">
+            <a href="/">
+              <img src="/templates/flover/img/logo.svg" />
+            </a>
           </div>
           <!-- /Лого -->
 
           <!-- Мини УТП -->
-          <div class="small-2 columns">
+          <div class="small-12 medium-3 large-2 columns">
             <div class="info">
               <strong>Цветы и&nbsp;букеты с&nbsp;доставкой</strong>
             </div>
@@ -27,7 +29,7 @@
           <!-- /Мини УТП -->
 
           <!-- Контакты -->
-          <div class="small-4 columns">
+          <div class="small-6 medium-5 large-3 columns">
             <div class="info">
               <a class="phone" href="tel:88123545145">(812) 354-51-45</a><small><a class="callback modal" href="#callback">Заказать звонок</a></small><br />
               <small>Время работы с 9:00 до 21:00</small>
@@ -36,7 +38,7 @@
           <!-- /Контакты -->
 
           <!-- Авторизация и регистрация -->
-          <div class="small-3 columns text-right">
+          <div class="small-6 medium-1 large-4 columns text-right">
             <div class="pay info">
               <small>Безопасные платежи PCI DSS</small>
               <img src="/templates/flover/img/pay.jpg" />
@@ -71,9 +73,9 @@
     <section class="basket">
       <form>
         <div class="row" data-equalizer="layout">
-          <div class="small-10 columns" data-equalizer-watch="layout">
+          <div class="medium-10 columns" data-equalizer-watch="layout">
             <div class="row" data-equalizer="items">
-              <div class="small-6 columns">
+              <div class="medium-6 columns">
                 <!-- Товар букет -->
                 <div class="item cart-item" data-equalizer-watch="items" data-price="2120">
                   <div class="row">
@@ -131,7 +133,7 @@
                 </div>
                 <!-- /Товар букет -->
               </div>
-              <div class="small-6 columns">
+              <div class="medium-6 columns">
                 <!-- Товар сувенир -->
                 <div class="item cart-item" data-equalizer-watch="items" data-price="1250">
                   <div class="row">
@@ -181,7 +183,7 @@
               </div>
             </div>
             <div class="row" data-equalizer="items">
-              <div class="small-6 columns">
+              <div class="medium-6 columns">
                 <!-- Товар букет -->
                 <div class="item cart-item" data-equalizer-watch="items" data-price="3500">
                   <div class="row">
@@ -245,7 +247,7 @@
             <div class="row">
               <div class="small-12 columns">
                 <span class="h5">Получателю может понравиться</span>
-                <ul class="small-block-grid-5 objects" data-equalizer="related">
+                <ul class="small-block-grid-2 medium-block-grid-5 objects" data-equalizer="related">
                   <li>
                     <div class="item">
                       <div class="top">
@@ -346,7 +348,7 @@
             </div>
             <!-- /Сопутствующие товары -->
           </div>
-          <div class="small-2 columns" data-equalizer-watch="layout">
+          <div class="medium-2 columns" data-equalizer-watch="layout">
             <!-- Итог -->
             <div class="summary">
               <!-- Итого -->
